fix: fix arrow spacing

--- a/src/frontend/src/components/Accordion/AccordionItem/styles.module.scss
+++ b/src/frontend/src/components/Accordion/AccordionItem/styles.module.scss
@@ -31,6 +31,7 @@
 
     &__arrow {
         margin-right: 48px;
+        min-width: 24px;
     }
 
     &__content {
